fixed the font so it loads, fixed appending results on reload, fixed results alignment

--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -30,17 +30,9 @@ button {
     justify-content: center;
 }
 
-.formFlexParent {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-}
-
 .resultsFlex {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px 0;
 }
-
-// .results p {
-//     text-align: center;
-// }
